# tensorflow-windows

./: .gitignore  CMakeLists.txt  README.md  build-debug-proj-mt.bat  build-win32.bat  build-win64.bat
tensorflow/: CMakeLists.txt  dummy.cc  tensorflow_lib_internal.cmake  tensorflow_pb.cmake  update_pb.bat
tensorflow/tensorflow-0.7.1/tensorflow/python/training/: checkpoint_state.pb.cc
tensorflow/tensorflow-0.7.1/tensorflow/python/util/protobuf/: compare_test.pb.cc
