# Copyright 2016 <chaishushan{AT}gmail.com>. All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

project(PROJECT_TENSORFLOW)

# tensorflow
#add_subdirectory(${CMAKE_SOURCE_DIR}/tensorflow)

# Protobuf
add_subdirectory(${CMAKE_SOURCE_DIR}/3rdparty/protobuf)
